Fix voting power slider popup closing issue on mobile - rc-trigger@>2.5.4

--- a/src/styles/features/_vote.scss
+++ b/src/styles/features/_vote.scss
@@ -36,6 +36,7 @@
   width: 240px;
   overflow: hidden;
   padding: 0 10px;
+  touch-action: manipulation;
 
   .weight {
     float: left;
